--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,8 @@ runs:
       GITHUB_TOKRN: ${{ inputs.token }}
     run: |
       gh version
-      [[ $(GITHUB_TOKEN=$GITHUB_TOKEN gh release list -L 1) =~ \((.+)\) ]] && echo "::set-output name=tag_name::${BASH_REMATCH[2]}"
+      gh release list -L 1 > tmp
+      [[ $(cat tmp) =~ \((.+)\) ]] && echo "::set-output name=tag_name::${BASH_REMATCH[2]}"
   - id: semver
     shell: python
     run: |
