--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,8 @@ runs:
         GITHUB_TOKEN: ${{ inputs.token }}
       run: |
         gh version
-        [[ $(gh release list -L 1) =~ \((.+)\) ]] && echo "::set-output name=tag_name::${BASH_REMATCH[2]}"
+        tag_name = $(gh release list -L 1 | awk '{print $1}')
+        echo "::set-output name=tag_name::$tag_name"
     - id: get_labels
       shell: bash
       run: |
