--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,5 +13,5 @@ jobs:
         uses: ./
         with:
           major_labels: feature,major
-          minor_labels: bugFix,minor
+          minor_labels: bugfix,minor
           patch_labels: hotfix,patch
