--- a/action.yml
+++ b/action.yml
@@ -40,8 +40,8 @@ runs:
     - id: calculate-semver
       shell: python
       run: |
-        prev = '${{ steps.last_tag.outputs.tag_name }}'
-        labels = '${{ steps.get_labels.outputs.current_labels }}'
+        prev = ${{ steps.last_tag.outputs.tag_name }}
+        labels = ${{ steps.get_labels.outputs.current_labels }}
 
         input_major_labels = '${{ inputs.major_labels }}'
         input_minor_labels = '${{ inputs.minor_labels }}'
@@ -49,7 +49,7 @@ runs:
 
 
         previous_version = prev.split('.')
-        labels = set(labels)
+        labels = set([labels])
 
         major = int(previous_version[0])
         minor = int(previous_version[1])
@@ -65,7 +65,7 @@ runs:
             minor = 0;
             patch = 0;
         elif bump_minor:
-            major = 0;
+            patch = 0;
             minor = minor + 1;
         elif bump_patch:
             patch = patch + 1;
