--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,7 @@ runs:
     - id: calculate-semver
       shell: python
       run: |
-        prev = ${{ steps.last_tag.outputs.tag_name }}'
+        prev = ${{ steps.last_tag.outputs.tag_name }}
         labels = ${{ steps.get_labels.outputs.current_labels }}
         printf(f'{prev} {labels}')
 
