--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ runs:
     - id: calculate-semver
       shell: python
       run: |
-        SEP_SYMBOL = ','
+
 
         prev = '${{ steps.last_tag.outputs.tag_name }}'
 
@@ -60,9 +60,9 @@ runs:
         minor = int(previous_version[1])
         patch = int(previous_version[2])
 
-        bump_major = len (set(input_major_labels.split(SEP_SYMBOL)).intersection(labels)) > 0
-        bump_minor = len (set(input_minor_labels.split(SEP_SYMBOL)).intersection(labels)) > 0
-        bump_patch = len (set(input_patch_labels.split(SEP_SYMBOL)).intersection(labels)) > 0
+        bump_major = len (set(input_major_labels.split(',')).intersection(labels)) > 0
+        bump_minor = len (set(input_minor_labels.split(',')).intersection(labels)) > 0
+        bump_patch = len (set(input_patch_labels.split(',')).intersection(labels)) > 0
 
 
         if bump_major:
