--- a/action.yml
+++ b/action.yml
@@ -42,13 +42,13 @@ runs:
         # this would return multiple labels, since pull request may attach multiple labels and one of the label may indicate the predefined semver label
         # try to match  mergeCommit by `$commit`, it should exist when trigger is `on.push master`  
         # TODO: maybe handle cannot find the PR's labels by current commit, if the trigger is not from PR merged (like on.push.tags)
-        labels=$(gh pr list --limit 1 --state merged --search '$commit' --json  mergeCommit,labels | jq '.[0].labels | map(.name) | join(",")')
+        labels=$(gh pr list --limit 1 --state merged --search '$commit' --json  mergeCommit,labels | jq -r '.[0].labels | map(.name) | join(",")')
         echo "::set-output name=current_labels::$labels"
     - id: calculate-semver
       shell: python
       run: |
         prev = '${{ steps.last_tag.outputs.tag_name }}'
-        labels = ${{ steps.get_labels.outputs.current_labels }}
+        labels = '${{ steps.get_labels.outputs.current_labels }}'
 
         input_major_labels = '${{ inputs.major_labels }}'
         input_minor_labels = '${{ inputs.minor_labels }}'
