--- a/action.yml
+++ b/action.yml
@@ -2,15 +2,15 @@ name: Auto Semver
 description: Auto generate semver
 inputs:
   major_labels:
-    description: labels indicate it would bump major vresion
+    description: labels indicate it would bump major version
     required: false
     default: major
   minor_labels:
-    description: labels indicate it would bump minor vresion
+    description: labels indicate it would bump minor version
     required: false
     default: minor
   patch_labels:
-    description: labels indicate it would bump patch vresion
+    description: labels indicate it would bump patch version
     required: false
     default: patch
   token:
@@ -46,25 +46,31 @@ runs:
         # this would return multiple labels, since pull request may attach multiple labels and one of the label may indicate the predefined semver label
         # try to match  mergeCommit by `$commit`, it should exist when trigger is `on.push master`  
         # TODO: maybe handle cannot find the PR's labels by current commit, if the trigger is not from PR merged (like on.push.tags)
-        labels=$(gh pr list --limit 1 --state merged --search '$commit' --json  mergeCommit,labels \
+        labels=$(gh pr list --limit 1 --state merged --search $commit --json  mergeCommit,labels \
         | jq -r '.[0].labels | select(length > 0) | map(.name) | join(",")')
+        echo "::set-output name=current_labels::"
         echo "::set-output name=current_labels::$labels"
     - id: calculate-semver
       shell: python
       run: |
-        prev = '${{ steps.last_tag.outputs.tag_name }}'
-        labels = '${{ steps.get_labels.outputs.current_labels }}'
+        import re;
 
+        labels = '${{ steps.get_labels.outputs.current_labels }}'
         input_major_labels = '${{ inputs.major_labels }}'
         input_minor_labels = '${{ inputs.minor_labels }}'
         input_patch_labels = '${{ inputs.patch_labels }}'
 
-        previous_version = prev.split('.')
         labels = set(labels.split(','))
 
-        major = int(previous_version[0])
-        minor = int(previous_version[1])
-        patch = int(previous_version[2])
+        ## REF: https://github.com/swaglive/action-semver/blob/main/action.yaml#L11
+        version_regexp = re.compile('^v?(?P<major>[0-9]+)(?:\.(?P<minor>[0-9]+))?(?:\.(?P<patch>[0-9]+))?(?:\-(?P<prerelease>[\w-]+))?(?:\+(?P<build>[\w-]+))?$')
+
+        prev = '${{ steps.last_tag.outputs.tag_name }}'
+        previous_versions = version_regexp.match(prev).groupdict()
+
+        major = int(previous_versions['major'])
+        minor = int(previous_versions['minor'])
+        patch = int(previous_versions['patch'])
 
         bump_major = len (set(input_major_labels.split(',')).intersection(labels)) > 0
         bump_minor = len (set(input_minor_labels.split(',')).intersection(labels)) > 0
