--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,3 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: auto semver
         uses: ./
+        with:
+          major_labels: feature major
+          minor_labels: bugfix minor
+          patch_labels: hotfix patch
